# ai-course

./: .gitignore
practice-18-12-2024/: dark.html  images.html  list.html  login.html  products.html
practice-18-12-2024/pages/: admin.html  basket.html  checkout.html  register.html  resume.html
practice-25-12-2024/vue-practice/: package-lock.json  package.json
task-1/: .env.example  README.md  analysis.ipynb  docker-compose.yml  main.py  requirements.txt  tasks.py
task-1/data/: sensors_data_2024-12-12 21:00:00.csv  sensors_data_2024-12-13 21:00:00.csv
task-2/: README.md  requirements.txt  solution.ipynb
task-2/data/: ga_solution_map.html  nn_solution_map.html  sa_solution_map.html
task-3/: README.md  dataset_analysis.ipynb  requirements.txt
task-3/data/: form_responses.xlsx
task-4/: .env.example  README.md  database.db  requirements.txt
task-4/migrations/: env.py
task-4/src/: __init__.py  bot.py  config.py  craft.py  database.py
task-5/: README.md  analysis.ipynb  requirements.txt
task-6/: README.md
task-7/: README.md  requirements.txt
task-7/lecture-11+12/: task.ipynb
task-7/lecture-13/: somefile_result.csv  synthetic_dataset.csv  synthetic_ecommerce_data.csv  task.ipynb
task-7/lecture-14/: task.ipynb
task-7/lecture-15/: task.ipynb
task-7/lecture-16/: task_part_1.ipynb  task_part_2.ipynb
task-7/lecture-18/: task.ipynb
task-final/: .env.example  README.md  data_normalization.ipynb  docker-compose.yml  geo-api.drawio  normalized_addresses.csv  pyproject.toml
task-final/docs/: geo-api.drawio
task-final/src/: main.py
(+10 files in other folders)
