[tool.poetry]
name = "geo-api"
version = "0.1.0"
description = ""
authors = ["NoyanTM <doge.channel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
faker = "^36.1.1"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.38"
spacy = "^3.8.4"
geopy = "^2.4.1"
fake-useragent = "^2.0.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
